--- a/Styles/style.css
+++ b/Styles/style.css
@@ -112,24 +112,62 @@ main{
 
 
 /* features styles */
+ .features-title{
+    border-left: 5px solid #FF900E;
+    padding-left: 20px;
+    margin-bottom: 20px;
+ }
+
 .features-container{
     display: flex;
-   justify-content: space-around;
+    gap: 51px;
+    
 }
-
 .all-features{
- box-shadow: 2px 5px 5px gray;
+    border-radius: 8px;
+    background-color: #FFF;
+    box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
+    padding: 10px 20px;
+    margin: 20px 0 0;
 }
-.features-image-container img{
-    width: 100%;
+.features-image{
+    position: relative;
 }
+.features-image img{
+    height: 90%;
+    margin-left: 30px;
+
+}
+.experience{
+    display: inline-block;
+    text-align: center;
+    padding: 45px;
+    width: 300px;
+    color: white;
+    border-radius: 5px;
+    background-color: #FF900E;
+    position: absolute;
+    left: -30px;
+bottom: -25px;
+    /* right: 0; */
+}
+.experience>h2{
+    margin: 0px;
+    font-size: 65px;
+}
+.experience>p{
+    font-size: 1.5rem;
+}
+/* .features-title{
+
+} */
+
 /* Some facts section */
 .facts-cart{
     display: flex;
 justify-content: space-around;
 margin: 50px 0 120px;
-
-
+gap: 20px;
 }
 .cart{
     border: 1px solid orange;
@@ -154,9 +192,26 @@ margin: 50px 0 120px;
 }
 
 
+/* sponsors section */
+.sponsors-content{
+    text-align: center;
+}
+.sponsors{
+    display: flex;
+    justify-content: space-evenly;
+    margin: 50px 0 100px;
+    align-items: center;
+    gap: 3vh;
+}
 
-
-
+/* footer section style */
+footer{
+    margin: 0 auto;
+    border-radius: 8px;
+    background-color: #FFF4E7;
+    text-align: center;
+    padding: 38px 0;
+}
 
 /* responsive media queries */
 @media screen and (max-width:756px) {
@@ -183,12 +238,31 @@ margin: 50px 0 120px;
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        gap: 3vh;
     }
     .cart{
         width: 241px;
     }
+   .sponsors{
+    flex-direction: column;
+   }
+   .sponsors img{
+    width: 165px;
+   }
+   .features-container{
+    flex-direction: column;
+   }
+   .features-image img{
+width: 100%;
+    margin-left: 0;
 }
+.experience{
+    max-width: 200px;
+}
+.experience>h2{
+    font-size: 40px;
+}
+}
+
 
 @media screen and (min-width:757px) and (max-width:1140px){
     header{
@@ -204,5 +278,25 @@ margin: 50px 0 120px;
     }
     .cart{
         width: 241px;
+    }
+    .sponsors{
+        flex-direction: column;
+        gap: 4vh;
+       }
+       .sponsors img{
+        width: 165px;
+       }
+       .features-container{
+        flex-direction: column;
+       }
+       .features-image img{
+    width: 100%;
+        margin-left: 0;
+    }
+    .experience{
+        max-width: 200px;
+    }
+    .experience>h2{
+        font-size: 40px;
     }
 }
